--- a/synergyhub_Vue/package.json
+++ b/synergyhub_Vue/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
